# nexusf5

./: .ansible-lint  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  TODO.md
.github/workflows/: _upgrade-wave-reusable.yml  lint.yml  rollback.yml  test-aws-auth.yml  upgrade-canary.yml  upgrade-wave.yml
.github/workflows/_reusable/: upgrade-wave.yml
ansible/: ansible.cfg
ansible/collections/: requirements.yml
ansible/inventory/: hosts.yml
ansible/inventory/group_vars/: all.yml  canary.yml  lab.yml  wave_1.yml  wave_2.yml  wave_3.yml
ansible/playbooks/: preflight.yml  rollback.yml  upgrade.yml  validate.yml
ansible/roles/f5_backup/: README.md
ansible/roles/f5_boot_switch/: README.md
ansible/roles/f5_failover/: README.md
ansible/roles/f5_health_gate/: README.md
ansible/roles/f5_image_install/: README.md
ansible/roles/f5_postcheck/: README.md
ansible/roles/f5_preflight/: README.md
docs/decisions/: 001-mock-topology.md  002-terraform-scope.md
mock-f5/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
mock-f5/app/: deps.py  main.py  models.py  state.py
mock-f5/app/routers/: chaos.py  extensions.py  icontrol.py
mock-f5/manifests/: canary.json  lab-50.json
mock-f5/proxy/: Dockerfile  README.md  render_nginx_conf.py
mock-f5/tests/: conftest.py  test_as3.py  test_chaos.py  test_cm.py  test_do.py  test_health.py  test_multiplexing.py  test_reboot.py  test_software.py  test_sys.py  test_version.py  test_volume.py  test_wave_membership.py
mock-f5/tests/integration/: conftest.py  helpers.py  test_upgrade_flow.py
observability/ingest/: README.md  __init__.py  gate.py  pusher.py  pyproject.toml  schema.py  writer.py
observability/ingest/tests/: conftest.py  test_gate.py  test_pusher.py  test_schema.py  test_writer.py
runbooks/: 01-preflight-failure.md  02-image-install-stuck.md  03-post-boot-unhealthy.md  04-rollback.md  05-running-a-wave.md  06-postcheck-drift.md  07-integration-diagnostics.md
terraform/environments/integration/: README.md  backend.tf  inventory.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  ve-instances.tf  versions.tf
terraform/environments/lab/: README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
terraform/environments/shared/: README.md  backend.tf  budget.tf  main.tf  oidc.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/as3-declaration/: README.md  main.tf  outputs.tf  variables.tf
tools/: ci-lint.sh  integration_wrapper.py  list_wave_devices.py
(+26 files in other folders)
